--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,9 @@
 
 
-DB_PASSWORD=MyS3cr3tP4ssWord@as2
-DB_NAME=esunDataBase
+DB_PASSWORD=
+DB_NAME=
 
 #variables declaradas para usar en app.module.ts
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=postgres
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
